--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -45,8 +45,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.SMIU.jar}:\
-    ${file.reference.primefaces-5.2.jar}
+    ${file.reference.primefaces-5.2.jar}:\
+    ${file.reference.SMIU.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
