--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,10 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\Farades\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3434110783.properties
+deploy.ant.properties.file=C:\\Users\\\u0410\u0440\u0442\u0435\u043c\\AppData\\Roaming\\NetBeans\\8.0.2\\config\\GlassFishEE6\\Properties\\gfv3-1078732000.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/develop/glassfish4/glassfish/domains/domain1
-j2ee.server.home=C:/develop/glassfish4/glassfish
-j2ee.server.instance=[C:\\develop\\glassfish4\\glassfish;C:\\develop\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/develop/glassfish4
+j2ee.server.domain=C:/workspace/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1\\glassfish;C:\\workspace\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=default
-user.properties.file=C:\\Users\\Farades\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\\u0410\u0440\u0442\u0435\u043c\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
