--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-fileupload-1.3.1.jar=lib/CopyLibs/commons-fileupload-1.3.1.jar
+file.reference.commons-io-2.4.jar=lib/CopyLibs/commons-io-2.4.jar
 file.reference.primefaces-5.2.jar=lib/CopyLibs/primefaces-5.2.jar
 file.reference.SMIU.jar=lib/CopyLibs/SMIU.jar
 includes=**
@@ -46,7 +48,9 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
     ${file.reference.primefaces-5.2.jar}:\
-    ${file.reference.SMIU.jar}
+    ${file.reference.SMIU.jar}:\
+    ${file.reference.commons-fileupload-1.3.1.jar}:\
+    ${file.reference.commons-io-2.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
