--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-fileupload-1.3.1.jar=lib/CopyLibs/commons-fileupload-1.3.1.jar
 file.reference.commons-io-2.4.jar=lib/CopyLibs/commons-io-2.4.jar
+file.reference.poi-3.12-20150511.jar=lib/CopyLibs/poi-3.12-20150511.jar
 file.reference.primefaces-5.2.jar=lib/CopyLibs/primefaces-5.2.jar
 file.reference.SMIU.jar=lib/CopyLibs/SMIU.jar
 includes=**
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.primefaces-5.2.jar}:\
     ${file.reference.SMIU.jar}:\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
-    ${file.reference.commons-io-2.4.jar}
+    ${file.reference.commons-io-2.4.jar}:\
+    ${file.reference.poi-3.12-20150511.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
