--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -52,7 +52,8 @@ javac.classpath=\
     ${file.reference.SMIU.jar}:\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.commons-io-2.4.jar}:\
-    ${file.reference.poi-3.12-20150511.jar}
+    ${file.reference.poi-3.12-20150511.jar}:\
+    ${libs.hibernate4-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
